bat.bool1.diff21.Diff21.scala.error
Compilation error:
Diff21:6: error: not found: value Maths
    return 2*Maths.abs(21-n)
             ^Diff21:10: error: not found: value Maths
    return Maths.abs(21-n)
           ^